# swarmzero

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agents.py  demo.py  events.py  orchestrator_flows.html  pyproject.toml  swarmzero_config_example.toml  swarmzero_config_example.yaml  swarmzero_config_test.toml  tools.py  workflows.py
.github/workflows/: test.yml
agent/: Dockerfile  agents.json  main.py  tools.py
agent/runners/: __init__.py  base_runner.py  branch_runner.py  delay_runner.py  loop_runner.py  parallel_runner.py  priority_runner.py  sequential_runner.py
agent/tasks/: __init__.py  task_base.py
orchestrator/: main.py
swarmzero/: __init__.py  agent.py  sdk_context.py  swarm.py  swarmzero_config_example.toml  workflow.py
swarmzero/api/: models.py
swarmzero/api/routes/: __init__.py  chat.py  database.py  files.py  vectorindex.py
swarmzero/chat/: chat_manager.py
swarmzero/config/: config.py
swarmzero/core/: agent.py  sdk_context.py  swarm.py
swarmzero/core/services/chat/: chat_manager.py  suggest_questions.py
swarmzero/core/services/database/: __init__.py  database.py  schemas.py
swarmzero/core/services/filestore/: __init__.py
swarmzero/core/services/llms/: __init__.py  claude.py  gemini.py  mistral.py  ollama.py  openai.py
swarmzero/core/services/llms/utils/: __init__.py  utils.py
swarmzero/core/services/retriever/: base_retrieve.py  chroma_retrieve.py  pinecone_retrieve.py
swarmzero/database/: database.py  schemas.py
swarmzero/experimental/: README.md  swarmzero-config.example.yaml
swarmzero/experimental/agent/: Dockerfile  main.py
swarmzero/experimental/agent/runners/: __init__.py  base_runner.py  branch_runner.py  delay_runner.py  loop_runner.py  parallel_runner.py  priority_runner.py  sequential_runner.py
swarmzero/experimental/agent/tasks/: __init__.py  task_base.py
swarmzero/experimental/orchestrator/: main.py
swarmzero/filestore/: filestore.py
swarmzero/llms/: __init__.py  bedrock.py  claude.py  gemini.py  mistral.py  nebius.py  ollama.py  openai.py  openrouter.py
swarmzero/llms/utils/: __init__.py  utils.py
swarmzero/memory/: __init__.py  mem0_memory.py
swarmzero/server/routes/: __init__.py  chat.py  database.py  files.py  swarm_chat.py  vectorindex.py
swarmzero/tools/agent_db/: nl_query.py  schema.py
swarmzero/tools/retriever/: base_retrieve.py  chroma_retrieve.py  pinecone_retrieve.py
swarmzero/utils/: __init__.py  callback.py  indexstore.py  suggest_questions.py  tools.py
tests/:  swarmzero_config_example.toml  swarmzero_config_test.toml  swarmzero_config_test.yaml  test_agent.py  test_sdk_context.py  test_swarm.py  test_workflow.py
tests/chat/: test_chat_manager.py  test_mem0_integration.py
tests/database/: test_database.py
tests/filestore/: test_filestore.py
tests/llms/: test_llm.py
tests/server/routes/: test_chat.py  test_database.py  test_files.py  test_vectorindex.py
tests/tools/: test_nl_query.py  test_schemas.py
tests/tools/retriever/: test_base_retrieve.py  test_chroma_retrieve.py  test_pinecone_retrieve.py
