[tool.poetry]
name = "swarmzero"
version = "0.0.3"
description = "This library provides you with an easy way to orchestrate AI Agents and Swarms on SwarmZero"
authors = ["SwarmZero Team <info@swarmzero.ai>"]
readme = "README.md"
repository = "https://github.com/swarmzero/swarmzero"
homepage = "https://swarmzero.ai"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.36"
aiosqlite = "^0.21.0"
toml = "^0.10.2"
python-multipart = "^0.0.20"
llama-index = "^0.12.37"
llama-index-llms-anthropic = "^0.6.19"
llama-index-llms-mistralai = "^0.3.3"
llama-index-llms-ollama = "^0.5.6"
llama-index-llms-openai = "^0.3.44"
llama-index-llms-azure-openai = "^0.3.2"
llama-index-llms-gemini = "^0.4.14"
llama-index-multi-modal-llms-openai = "^0.4.3"
llama-index-vector-stores-chroma = "^0.4.1"
llama-index-vector-stores-pinecone = "^0.4.5"
llama-index-readers-s3 = "^0.4.0"
llama-index-llms-nebius = "^0.1.1"
llama-index-memory-mem0 = "^0.3.1"
chromadb = "^0.6.3"
langtrace-python-sdk = "^3.8.17"
openlit = "^1.33.22"
asyncpg = "^0.30.0"
openpyxl = "^3.1.5"
docx2txt = "^0.8"
xlrd = "^2.0.1"
redis = "^5.3.0"
colorama = "^0.4.6"
requests = "^2.32.3"
boto3 = "^1.37.3"
types-boto3 = "^1.38.23"

[tool.poetry.extras]
web3 = ["web3", "py-solc-x", "eth-account"]

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = ["swarmzero/experimental/*", "tests"]
